[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/menus/elements/settingsPanel.gd" type="Script" id=1]
[ext_resource path="res://scripts/menus/ButtonScript.gd" type="Script" id=2]
[ext_resource path="res://scripts/menus/SliderScript.gd" type="Script" id=3]
[ext_resource path="res://scenes/assets/font.tres" type="DynamicFont" id=4]

[node name="settingsPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -384.0
margin_bottom = -288.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="fullscreenCheck" type="CheckBox" parent="."]
margin_right = 104.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 4 )
text = "Fullscreen"
script = ExtResource( 2 )

[node name="usecontrollerCheck" type="CheckBox" parent="."]
margin_left = 128.0
margin_right = 256.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 4 )
text = "Use Controller"
script = ExtResource( 2 )

[node name="mouseSenLabel" type="Label" parent="."]
margin_top = 32.0
margin_right = 118.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 4 )
text = "Mouse Sensitivity:"

[node name="mouseSenSlider" type="HSlider" parent="."]
margin_top = 56.0
margin_right = 192.0
margin_bottom = 72.0
min_value = 0.1
max_value = 2.0
step = 0.05
value = 1.0
script = ExtResource( 3 )

[node name="pixelCheck" type="CheckBox" parent="."]
margin_top = 72.0
margin_right = 160.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 4 )
text = "Pixelated Graphics"
script = ExtResource( 2 )

[connection signal="toggled" from="fullscreenCheck" to="." method="_on_fullscreenCheck_toggled"]
[connection signal="toggled" from="usecontrollerCheck" to="." method="_on_usecontrollerCheck_toggled"]
[connection signal="drag_ended" from="mouseSenSlider" to="." method="_on_mouseSenSlider_drag_ended"]
[connection signal="value_changed" from="mouseSenSlider" to="." method="_on_mouseSenSlider_value_changed"]
[connection signal="toggled" from="pixelCheck" to="." method="_on_pixelCheck_toggled"]
